[fix]Mac起動オプションが確定したので起動方法を記載